# bob_llm

./: .flake8  .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  package.xml  requirements.txt
.github/workflows/: docker.yml  ros_ci.yml
bob_llm/: backend_clients.py  chat.py  chat_node.py  llm_node.py  setup.cfg  tool_utils.py
config/: node_params.yaml  qdrant_tools.py  ros_cli_tools.py  skill_tools.py
config/skills/memory/: SKILL.md
config/skills/memory/data/: memory.json
config/skills/memory/scripts/: save.py  search.py
log/: latest_test  latest_test-result
tests/: .env.template  conftest.py  test_llm_integration.py
