<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bob_llm</name>
  <version>1.0.0</version>
  <description>ROS 2 package for interfacing with Large Language Models.</description>
  <maintainer email="ros@bob.de">BobRos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  
  <!-- Python dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>